<resources>
    <string name="app_name">Gloovito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gloovito</string>
    <string name="nav_header_subtitle">support@gloovito.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="buy">Buy</string>
    <string name="edit">Edit</string>
    <string name="weakpass">Your password is weak</string>
    <string name="accountexisterror">Exist one account with this email</string>
    <string name="registercorrect">Register correctly</string>
    <string name="logincorrect">Login correctly</string>
    <string name="errorlogin">This account doesn\'t exist</string>
    <string name="update">Update</string>
    <string name="errornumber">Number incorrect</string>
    <string name="wallet">Wallet</string>
    <string name="reserved">Reserved</string>
    <string name="charge">Charge</string>
    <string name="quantity">Quantity</string>
    <string name="enteredcorrect">Entered Correctly</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <string name="details">Details</string>
    <string name="restart">Restart</string>
    <string name="cancel">Cancel</string>
    <string name="review">Review</string>
    <string name="canceled">Canceled</string>
    <string name="completed">Completed</string>
    <string name="ordercanceled">Your order has been canceled</string>
    <string name="ordercomplete">Your order has been completed</string>
    <string name="orderchange">You have changes in one of your orders</string>
    <string name="emptyuser">You cant insert an empty username</string>
    <string name="shopcart">Shopping cart</string>
    <string name="product">Product</string>
    <string name="recreate">Do you want to create a copy of this order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmbuy">Do you really want to make this order?</string>
    <string name="ordercorrec">Order creates correctly</string>
    <string name="nostock">Not enouth stock</string>
    <string name="errorlocal">An error ocurred loading the local</string>
    <string name="locales">Local</string>
    <string name="confirmlogout">Do you want to logout?</string>
    <string name="ordernoexist">This order is no longer available</string>
    <string name="logout">Logout</string>
    <string name="addedcorrect">Added correctly</string>
    <string name="updatedcorrect">Updated correctly</string>
    <string name="confirmcharge">Do you really want to make the movement?</string>
    <string name="movementconfirm">Movement confirm</string>
    <string name="notenoughtmoney">You dont have enougth money</string>
</resources>