<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gloovito.ui.locales.LocalesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_locales" >
        <action
            android:id="@+id/action_nav_home_to_productosFragment"
            app:destination="@id/productosFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.gloovito.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.gloovito.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/login"
        android:name="com.example.gloovito.ui.Login"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/productosFragment"
        android:name="com.example.gloovito.ui.locales.ProductosFragment"
        android:label="fragment_productos"
        tools:layout="@layout/fragment_productos" />
    <fragment
        android:id="@+id/carritoFragment"
        android:name="com.example.gloovito.ui.carro.CarritoFragment"
        android:label="fragment_carrito"
        tools:layout="@layout/fragment_carrito" /><action android:id="@+id/action_global_carritoFragment" app:destination="@id/carritoFragment"/>
</navigation>